# mda_commerce

./: .dockerignore  .editorconfig  .env.docker.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy-staging.yml
backend/: .env.example  Cargo.toml  sqlx-data.json
backend/migrations/: 0001_initial_setup.sql
backend/src/: db.rs  main.rs  models.rs  tests.rs
backend/src/handlers/: about.rs  admin.rs  contact.rs  landing.rs  mod.rs  shop.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.test.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
frontend/src/components/: AboutSection.test.tsx  AboutSection.tsx  FeaturedGallery.test.tsx  FeaturedGallery.tsx  Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  Hero.test.tsx  Hero.tsx  ProtectedRoute.tsx  SocialFeed.test.tsx  SocialFeed.tsx
frontend/src/context/: CartContext.test.tsx  CartContext.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: AboutPage.tsx  AdminDashboard.tsx  AdminLogin.tsx  CheckoutPage.tsx  ContactPage.tsx  LandingPage.tsx  ShopPage.tsx
frontend/src/test/: AboutPage.test.tsx  ContactPage.test.tsx  ShopPage.test.tsx
frontend/src/test/pages/: AdminDashboard.test.tsx  AdminLogin.test.tsx
scripts/: dev.sh  setup_infra.sh
