[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = { version = "0.5.2", features = ["util"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
dotenv = "0.15"
reqwest = { version = "0.12.25", features = ["json"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
